# sound-bridge

./: CMakeLists.txt
alsa_backend/: CMakeLists.txt  sharedbuffer.c  sharedbuffer.h  sound.c  sound.h
client/: CMakeLists.txt
client/src/: client.c
server/: CMakeLists.txt
server/src/: server.c
utils/: CMakeLists.txt  debug.c  debug.h
